test/parsing/vass/wrong-escapes-1.good
wrong-escapes-1.chpl:3: syntax error: near 'DONE'
